fixed overflow on create annotation view in the right panel

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4205,3 +4205,7 @@ form .form-actions {
 #ios-bookmarklet-code {
     width: 80%;
 }
+
+#tabs-1 {
+    overflow: auto;
+}
